fix: docs build

--- a/docs/revm/pages/beginner-tutorial/basic-transaction-execution.mdx
+++ b/docs/revm/pages/beginner-tutorial/basic-transaction-execution.mdx
@@ -39,7 +39,7 @@ Let's walk through these steps one by one.
 
 ### 1. Creating an Execution Environment
 
-First, set up your project by adding REVM as a dependency as described in the [Getting Started](/beginner-tutorial/1.2-getting-started) guide.
+First, set up your project by adding REVM as a dependency as described in the [Getting Started](#TODO) guide.
 
 Then, create an execution environment with a state database. For this tutorial, we'll use an in-memory database:
 
@@ -665,7 +665,7 @@ In the next tutorial, we'll dive deeper into smart contract deployment, includin
 - Interacting with newly deployed contracts
 - Understanding deployment gas costs
 
-Continue to [Smart Contract Deployment](/beginner-tutorial/1.4-smart-contract-deployment) to learn more.
+Continue to [Smart Contract Deployment](#TODO) to learn more.
 
 ---
 
