--- a/docs/revm/pages/beginner-tutorial/introduction-to-revm.mdx
+++ b/docs/revm/pages/beginner-tutorial/introduction-to-revm.mdx
@@ -188,7 +188,7 @@ Now that you understand what REVM is and its place in the Ethereum ecosystem, yo
 - Setting up a basic project
 - Creating your first REVM application
 
-Continue to [Getting Started](/beginner-tutorial/getting-started) to begin your journey with REVM.
+Continue to [Getting Started](#TODO) to begin your journey with REVM.
 
 ---
 
