--- a/docs/revm/pages/beginner-tutorial/next-steps.mdx
+++ b/docs/revm/pages/beginner-tutorial/next-steps.mdx
@@ -213,17 +213,17 @@ To continue your REVM journey, check out these resources:
 
 Explore the REVM documentation for more detailed information:
 
-- [Intermediate Concepts](../intermediate-concepts/README.md): Deeper explanations of REVM's architecture and components
-- [REVM Examples](../revm-examples/README.md): Complete, annotated examples of common REVM use cases
-- [Expert Reference Docs](../expert-reference/README.md): Detailed reference documentation for all REVM components
+- [Intermediate Concepts](#TODO): Deeper explanations of REVM's architecture and components
+- [REVM Examples](#TODO): Complete, annotated examples of common REVM use cases
+- [Expert Reference Docs](#TODO): Detailed reference documentation for all REVM components
 
 ### Code Examples
 
 Study the example code in the REVM repository for practical implementations:
 
-- [Contract Deployment Example](../revm-examples/3.1-contract-deployment-example.md): Deploying contracts from Solidity compilation
-- [Custom EVM Example](../revm-examples/3.2-custom-evm-example.md): Creating custom EVM variants
-- [ERC20 Gas Example](../revm-examples/3.3-erc20-gas-example.md): Using ERC20 tokens for gas payment
+- [Contract Deployment Example](#TODO): Deploying contracts from Solidity compilation
+- [Custom EVM Example](#TODO): Creating custom EVM variants
+- [ERC20 Gas Example](#TODO): Using ERC20 tokens for gas payment
 
 ### External Resources
 
@@ -388,4 +388,4 @@ We hope this tutorial has been helpful in starting your REVM journey. Happy codi
 
 ---
 
-**Ready to continue learning?** Head over to the [Intermediate Concepts](../intermediate-concepts/README.md) section to deepen your understanding of REVM's architecture and components.
+**Ready to continue learning?** Head over to the [Intermediate Concepts](#TODO) section to deepen your understanding of REVM's architecture and components.
