--- a/docs/revm/pages/beginner-tutorial/state-management.mdx
+++ b/docs/revm/pages/beginner-tutorial/state-management.mdx
@@ -965,7 +965,7 @@ These skills provide a solid foundation for working with Ethereum state in REVM.
 
 ## Next Steps
 
-Continue to [Next Steps](/beginner-tutorial/1.6-next-steps) to learn about additional resources and more advanced topics for working with REVM.
+Continue to [Next Steps](#TODO) to learn about additional resources and more advanced topics for working with REVM.
 
 ---
 
