--- a/docs/revm/pages/examples/basic-transaction-processing.mdx
+++ b/docs/revm/pages/examples/basic-transaction-processing.mdx
@@ -450,6 +450,6 @@ You can use these fundamentals as building blocks for more complex applications,
 
 ## Next Steps
 
-- Learn about [Contract Deployment and Interaction](/examples/3.2-contract-deployment-interaction)
-- Explore [EVM State Manipulation](/examples/3.3-state-manipulation)
-- Understand [Gas Profiling and Optimization](/examples/3.4-gas-profiling)
+- Learn about [Contract Deployment and Interaction](#TODO)
+- Explore [EVM State Manipulation](#TODO)
+- Understand [Gas Profiling and Optimization](#TODO)
