--- a/docs/revm/pages/examples/contract-deployment-interaction.mdx
+++ b/docs/revm/pages/examples/contract-deployment-interaction.mdx
@@ -966,6 +966,6 @@ These techniques form the foundation for building more complex applications with
 
 ## Next Steps
 
-- Explore [EVM State Manipulation](/examples/3.3-state-manipulation) to learn more about state management
-- Learn about [Gas Profiling and Optimization](/examples/3.4-gas-profiling) to optimize contract execution
-- Try out [Custom Tracing and Debugging](/examples/3.5-tracing-debugging) for detailed execution analysis
+- Explore [EVM State Manipulation](#TODO) to learn more about state management
+- Learn about [Gas Profiling and Optimization](#TODO) to optimize contract execution
+- Try out [Custom Tracing and Debugging](#TODO) for detailed execution analysis
