--- a/docs/revm/pages/examples/gas-profiling.mdx
+++ b/docs/revm/pages/examples/gas-profiling.mdx
@@ -980,6 +980,6 @@ By applying these techniques, you can significantly reduce the gas costs of your
 
 ## Next Steps
 
-- Explore [Custom Tracing and Debugging](/examples/3.5-tracing-debugging) for deeper execution analysis
-- Learn about [Block Explorer Implementation](/examples/3.6-block-explorer) for analyzing transactions
-- Try [Forking from a Live Network](/examples/3.7-forking-network) to test optimizations against real network states
+- Explore [Custom Tracing and Debugging](#TODO) for deeper execution analysis
+- Learn about [Block Explorer Implementation](#TODO) for analyzing transactions
+- Try [Forking from a Live Network](#TODO) to test optimizations against real network states
