--- a/docs/revm/pages/examples/state-manipulation.mdx
+++ b/docs/revm/pages/examples/state-manipulation.mdx
@@ -575,6 +575,6 @@ These techniques are powerful tools for testing, debugging, and developing custo
 
 ## Next Steps
 
-- Learn about [Gas Profiling and Optimization](/examples/3.4-gas-profiling)
-- Explore [Custom Tracing and Debugging](/examples/3.5-tracing-debugging)
-- Understand [Block Explorer Implementation](/examples/3.6-block-explorer)
+- Learn about [Gas Profiling and Optimization](#TODO)
+- Explore [Custom Tracing and Debugging](#TODO)
+- Understand [Block Explorer Implementation](#TODO)
