--- a/docs/revm/pages/intermediate-concepts/block-processing.mdx
+++ b/docs/revm/pages/intermediate-concepts/block-processing.mdx
@@ -802,9 +802,9 @@ Understanding these concepts allows for effective use of REVM for block simulati
 
 Now that you understand block processing in REVM, you might want to explore:
 
-- [EVM Customization](/intermediate-concepts/2.6-evm-customization): Learn how to customize REVM's behavior
-- [Performance Considerations](/intermediate-concepts/2.7-performance-considerations): Understand performance aspects of block processing
-- [Integration Patterns](/intermediate-concepts/2.8-integration-patterns): Discover how to integrate REVM with other systems
+- [EVM Customization](#TODO): Learn how to customize REVM's behavior
+- [Performance Considerations](#TODO): Understand performance aspects of block processing
+- [Integration Patterns](#TODO): Discover how to integrate REVM with other systems
 
 ---
 
