--- a/docs/revm/pages/intermediate-concepts/evm-customization.mdx
+++ b/docs/revm/pages/intermediate-concepts/evm-customization.mdx
@@ -1223,9 +1223,9 @@ By following best practices and leveraging REVM's trait-based design, you can cr
 
 Now that you understand how to customize REVM, you might want to explore:
 
-- [Performance Considerations](/intermediate-concepts/2.7-performance-considerations): Learn about optimizing REVM for performance
-- [Integration Patterns](/intermediate-concepts/2.8-integration-patterns): Discover how to integrate REVM with other systems
-- [Custom Precompiles Example](../revm-examples/3.6-custom-opcodes-example.md): See a detailed example of adding custom precompiles
+- [Performance Considerations](#TODO): Learn about optimizing REVM for performance
+- [Integration Patterns](#TODO): Discover how to integrate REVM with other systems
+- [Custom Precompiles Example](#TODO): See a detailed example of adding custom precompiles
 
 ---
 
