--- a/docs/revm/pages/intermediate-concepts/evm-execution-model.mdx
+++ b/docs/revm/pages/intermediate-concepts/evm-execution-model.mdx
@@ -623,9 +623,9 @@ Understanding this model helps when working with REVM for both standard Ethereum
 
 Now that you understand the EVM execution model, you might want to explore:
 
-- [State and Storage](/intermediate-concepts/2.3-state-and-storage): Learn about REVM's state model and storage access
-- [Transaction Processing](/intermediate-concepts/2.4-transaction-processing): Understand the full transaction lifecycle
-- [EVM Customization](/intermediate-concepts/2.6-evm-customization): Learn how to customize the EVM execution model
+- [State and Storage](#TODO): Learn about REVM's state model and storage access
+- [Transaction Processing](#TODO): Understand the full transaction lifecycle
+- [EVM Customization](#TODO): Learn how to customize the EVM execution model
 
 ---
 
