--- a/docs/revm/pages/intermediate-concepts/integration-patterns.mdx
+++ b/docs/revm/pages/intermediate-concepts/integration-patterns.mdx
@@ -1789,9 +1789,9 @@ By following these patterns, you can effectively integrate REVM into your Ethere
 
 Now that you understand integration patterns for REVM, you might want to explore:
 
-- [REVM Examples](../revm-examples/README.md): See real-world examples of REVM integration
-- [Expert Reference: Database Components](../expert-reference/4.7-database-components.md): Learn about advanced database integration
-- [Expert Reference: JSON-RPC API](../expert-reference/4.5-json-rpc-api.md): Explore detailed JSON-RPC implementation
+- [REVM Examples](#TODO): See real-world examples of REVM integration
+- [Expert Reference: Database Components](#TODO): Learn about advanced database integration
+- [Expert Reference: JSON-RPC API](#TODO): Explore detailed JSON-RPC implementation
 
 ---
 
