--- a/docs/revm/pages/intermediate-concepts/performance-considerations.mdx
+++ b/docs/revm/pages/intermediate-concepts/performance-considerations.mdx
@@ -1113,9 +1113,9 @@ By applying these techniques appropriately, you can significantly improve REVM p
 
 Now that you understand REVM performance considerations, you might want to explore:
 
-- [Integration Patterns](/intermediate-concepts/2.8-integration-patterns): Learn how to integrate REVM with other systems
-- [EVM Customization](/intermediate-concepts/2.6-evm-customization): Explore how customization can improve performance
-- [Expert Reference: Database Components](../expert-reference/4.7-database-components.md): Dive deeper into database optimizations
+- [Integration Patterns](#TODO): Learn how to integrate REVM with other systems
+- [EVM Customization](#TODO): Explore how customization can improve performance
+- [Expert Reference: Database Components](#TODO): Dive deeper into database optimizations
 
 ---
 
