--- a/docs/revm/pages/intermediate-concepts/revm-architecture.mdx
+++ b/docs/revm/pages/intermediate-concepts/revm-architecture.mdx
@@ -553,9 +553,9 @@ This architecture enables REVM to serve as both a standard Ethereum execution en
 
 Now that you understand REVM's architecture, you can explore:
 
-- [EVM Execution Model](/intermediate-concepts/2.2-evm-execution-model): Learn about instruction processing, gas metering, and execution flow
-- [State and Storage](/intermediate-concepts/2.3-state-and-storage): Dive deeper into state representation and management
-- [EVM Customization](/intermediate-concepts/2.6-evm-customization): Learn how to create custom EVM implementations
+- [EVM Execution Model](#TODO): Learn about instruction processing, gas metering, and execution flow
+- [State and Storage](#TODO): Dive deeper into state representation and management
+- [EVM Customization](#TODO): Learn how to create custom EVM implementations
 
 ---
 
