--- a/docs/revm/pages/intermediate-concepts/state-and-storage.mdx
+++ b/docs/revm/pages/intermediate-concepts/state-and-storage.mdx
@@ -883,9 +883,9 @@ Understanding these concepts allows for efficient and effective use of REVM's st
 
 Now that you understand REVM's state model, you might want to explore:
 
-- [Transaction Processing](/intermediate-concepts/2.4-transaction-processing): Learn about the transaction lifecycle in REVM
-- [Block Processing](/intermediate-concepts/2.5-block-processing): Understand how REVM processes blocks of transactions
-- [EVM Customization](/intermediate-concepts/2.6-evm-customization): Learn how to customize REVM's behavior
+- [Transaction Processing](#TODO): Learn about the transaction lifecycle in REVM
+- [Block Processing](#TODO): Understand how REVM processes blocks of transactions
+- [EVM Customization](#TODO): Learn how to customize REVM's behavior
 
 ---
 
