--- a/docs/revm/pages/intermediate-concepts/transaction-processing.mdx
+++ b/docs/revm/pages/intermediate-concepts/transaction-processing.mdx
@@ -847,9 +847,9 @@ Understanding this process allows for effective use of REVM for transaction simu
 
 Now that you understand transaction processing in REVM, you might want to explore:
 
-- [Block Processing](/intermediate-concepts/2.5-block-processing): Learn how REVM processes blocks of transactions
-- [EVM Customization](/intermediate-concepts/2.6-evm-customization): Discover how to customize transaction processing behavior
-- [Performance Considerations](/intermediate-concepts/2.7-performance-considerations): Understand performance aspects of transaction processing
+- [Block Processing](#TODO): Learn how REVM processes blocks of transactions
+- [EVM Customization](#TODO): Discover how to customize transaction processing behavior
+- [Performance Considerations](#TODO): Understand performance aspects of transaction processing
 
 ---
 
