--- a/docs/revm/pages/beginner-tutorial/getting-started.mdx
+++ b/docs/revm/pages/beginner-tutorial/getting-started.mdx
@@ -298,7 +298,7 @@ Now that you've set up REVM and created a simple application, you're ready to di
 - Understanding and interpreting transaction results
 - Handling errors and gas usage
 
-Continue to [Basic Transaction Execution](/beginner-tutorial/1.3-basic-transaction-execution) to learn more about executing transactions with REVM.
+Continue to [Basic Transaction Execution](#TODO) to learn more about executing transactions with REVM.
 
 ---
 
