--- a/docs/revm/pages/beginner-tutorial/smart-contract-deployment.mdx
+++ b/docs/revm/pages/beginner-tutorial/smart-contract-deployment.mdx
@@ -22,8 +22,8 @@ In REVM, we can simulate all these steps to test and analyze contract deployment
 ## Prerequisites
 
 Before you start, make sure you've completed the previous tutorials:
-- [Getting Started with REVM](/beginner-tutorial/1.2-getting-started)
-- [Basic Transaction Execution](/beginner-tutorial/1.3-basic-transaction-execution)
+- [Getting Started with REVM](#TODO)
+- [Basic Transaction Execution](#TODO)
 
 ## Contract Bytecode Structure
 
@@ -781,7 +781,7 @@ These skills form the foundation for working with smart contracts in REVM. In th
 
 ## Next Steps
 
-Continue to [State Management](/beginner-tutorial/1.5-state-management) to learn how to work with Ethereum state in REVM.
+Continue to [State Management](#TODO) to learn how to work with Ethereum state in REVM.
 
 ---
 
