--- a/docs/node/pages/examples/viem.mdx
+++ b/docs/node/pages/examples/viem.mdx
@@ -9,10 +9,7 @@ import { Tab, TabGroup, Card, CardGrid } from "../../components";
 # Using with Viem
 
 <Callout type="info" emoji="🔌">
-  Tevm integrates seamlessly with{" "}
-  <a href="https://viem.sh" target="_blank">
-    viem
-  </a>
+  Tevm integrates seamlessly with <a href="https://viem.sh" target="_blank">viem</a>
   , providing a powerful local Ethereum environment with viem's familiar API
   surface.
 </Callout>
