--- a/docs/node/pages/api/whatsabi-integration.mdx
+++ b/docs/node/pages/api/whatsabi-integration.mdx
@@ -714,19 +714,6 @@ npm install @uniswap/v3-core
   <p>
     This API design is currently in the planning phase. If you have suggestions,
     feature requests, or other feedback about the proposed Contract Loader
-    integration, please share your thoughts in our <a
-      href="https://github.com/evmts/tevm-monorepo/issues/new?labels=enhancement&template=feature_request.md&title=%5BFeature%5D%3A+Contract+Loader+Feedback"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      GitHub repository
-    </a> or <a
-      href="https://t.me/+ANThR9bHDLAwMjUx"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      Telegram community
-    </a>
-    .
+    integration, please share your thoughts in our <a href="https://github.com/evmts/tevm-monorepo/issues/new?labels=enhancement&template=feature_request.md&title=%5BFeature%5D%3A+Contract+Loader+Feedback" target="_blank" rel="noopener noreferrer">GitHub repository</a> or <a href="https://t.me/+ANThR9bHDLAwMjUx" target="_blank" rel="noopener noreferrer">Telegram community</a>.
   </p>
 </div>
