fix link to json-rpc

--- a/docs/node/pages/advanced/custom-precompiles.mdx
+++ b/docs/node/pages/advanced/custom-precompiles.mdx
@@ -443,5 +443,5 @@ const precompile = definePrecompile({
 
 - [Contract Reference](/reference/contract) - Working with smart contracts in Tevm
 - [State Management](/core/managing-state) - Access and manipulate blockchain state
-- [JSON-RPC Support](/api/json-rpc) - Expose precompiles via JSON-RPC
+- [JSON-RPC Support](../api/json-rpc) - Expose precompiles via JSON-RPC
 - [EVM Precompiles Reference](https://www.evm.codes/precompiled) - Standard Ethereum precompiled contracts
